--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -1,9 +1,44 @@
+
+html {
+  font-family: sans-serif; /* 1 */
+  -ms-text-size-adjust: 100%; /* 2 */
+  -webkit-text-size-adjust: 100%; /* 2 */
+}
+
+/**
+ * Remove default margin.
+ */
+
+body {
+  margin: 0;
+  background-color: #e8f4f8;
+
+}
+
 .spinner {
   width: 8%;
 }
 
-img.spinner {
+.spinner {
   -webkit-animation: spin 4s infinite linear;
   -moz-animation: spin 4s infinite linear;
   animation: spin 4s infinite linear;
+}
+
+.main-title{
+margin: 1em 0em 1.5em 0em;
+}
+
+
+
+@media screen 
+  and (min-device-width: 1200px) 
+  and (max-device-width: 2000px)  { 
+  
+.container {
+margin-left: 20%;
+  max-width: 60%;
+  margin-right: 20%;
+}
+
 }
