--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -29,7 +29,23 @@ body {
 margin: 1em 0em 1.5em 0em;
 }
 
+.padding-left{
+	margin-left: 1em;
+}
 
+.padding-bottom-top{
+	padding-bottom: 1em;
+	padding-top: 1em;
+}
+
+.modal-button{
+	width: 100%;
+	height: 4em;
+}
+.green{
+	color: #007f00;
+	font-weight: bolder;
+}
 
 @media screen 
   and (min-device-width: 1200px) 
@@ -41,4 +57,7 @@ margin-left: 20%;
   margin-right: 20%;
 }
 
+.padding-left{
+	margin-left: 2em;
+}
 }
