--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -42,9 +42,24 @@ margin: 1em 0em 1.5em 0em;
 	width: 100%;
 	height: 4em;
 }
+
 .green{
 	color: #007f00;
 	font-weight: bolder;
+}
+
+.blue {
+	color: #2098d1;
+	text-align: center;
+}
+
+.grey {
+	color: #2a2a2a;
+	font-weight: bold;
+	padding-bottom: 0.5em;
+}
+.padding-bottom{
+	padding-bottom: 1em;
 }
 
 @media screen 
